--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,17 @@
+application: cs496-assignment1-1266
+#version: 1
 runtime: python27
 api_version: 1
-threadsafe: true
+threadsafe: yes
 
-handlers: 
-- url: /.*
-  script: helloworld.app
+handlers:
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon\.ico
+
+- url: .*
+  script: main.app
+
+libraries:
+- name: webapp2
+  version: "2.5.2"
