updates to tutorial

--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,21 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /stylesheets
+  static_dir: stylesheets
+
+- url: /loggedin
+  script: loggedin.app
+
+- url: /guestbook.*
+  script: guestbook.app
+
 - url: .*
   script: main.app
 
+# serious applications should use a version number instead of latest
 libraries:
 - name: webapp2
-  version: "2.5.2"
+  version: latest
+- name: jinja2
+  version: latest
